Fix kanban horizontal scroll.

--- a/app/less/taiga.less
+++ b/app/less/taiga.less
@@ -3446,14 +3446,14 @@ body.login {
     }
 
     .kanban-container {
-        overflow-x: scroll;
+        overflow-x: auto;
         width: 100%;
         table {
             width: 100%;
             border-collapse: collapse;
             margin: 0;
             padding: 0;
-            table-layout: fixed;
+            // table-layout: fixed;
             tr,td{
                 margin: 0;
                 padding: 0;
@@ -3776,6 +3776,7 @@ body.login {
                                         font-family: 'ColabThi';
                                         font-size: 14px;
                                         font-style: italic;
+                                        float: right;
                                         .total {
                                             font-weight: bold;
                                         }
